demo-app-wkl.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ccm-challenge

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autostopping-anbu-app
  namespace: ccm-challenge
  labels:
    app: autostopping-anbu-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autostopping-anbu-app
  template:
    metadata:
      labels:
        app: autostopping-anbu-app
    spec:
      containers:
      - name: autostopping-anbu-app
        image: gacerioni/harness-anbu-demo:5.0.5
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/v1/harness-modules
            port: http
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: http
        startupProbe:
          httpGet:
            path: /api/v1/harness-modules
            port: http
          failureThreshold: 15
          periodSeconds: 5        

---
apiVersion: v1
kind: Service
metadata:
  name: autostopping-anbu-svc
  namespace: ccm-challenge
spec:
  selector:
    app: autostopping-anbu-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autostopping-anbu-ing
  namespace: ccm-challenge
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: autostopping-anbu-svc
            port:
              number: 80
        path: /
        pathType: Prefix
